--- a/HRManager/AddPersonWindow.xaml
+++ b/HRManager/AddPersonWindow.xaml
@@ -5,8 +5,22 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HRManager"
         mc:Ignorable="d"
-        Title="AddPersonWindow" Height="300" Width="1000">
+        Title="Hire employee" SizeToContent="Height" Width="400"
+        Loaded="Window_Loaded">
     <Grid>
-        <local:PersonUserControl Margin="5" />
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <local:PersonUserControl x:Name="personUserControl" Margin="5" />
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <Button x:Name="buttonOK" Content="_Ok" IsDefault="True" Width="75" Margin="10 10" Grid.Column="1" Click="ButtonOKClick"/>
+            <Button x:Name="buttonCancel" Content="_Cancel" IsCancel="True" Width="75" Margin="10 10" Grid.Column="2" Click="ButtonCancelClick"/>
+        </Grid>
     </Grid>
 </Window>
