--- a/HRManager/AddPersonWindow.xaml
+++ b/HRManager/AddPersonWindow.xaml
@@ -9,7 +9,7 @@
         Loaded="Window_Loaded">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <local:PersonUserControl x:Name="personUserControl" Margin="5" />
