--- a/HRManager/MainWindow.xaml
+++ b/HRManager/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HRManager"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="350" Width="525" IsEnabled="{Binding IsNotRefreshing}">
     <Window.Resources>
         <DataTemplate x:Key="PersonTemplate">
             <StackPanel Orientation="Horizontal">
@@ -22,7 +22,7 @@
     </Window.Resources>
     <Grid x:Name="gridMain" d:DataContext="{d:DesignData /SampleData/MainWindowViewModelSampleData.xaml}">
         <Grid.RowDefinitions>
-            <RowDefinition Height="40"/>
+            <RowDefinition Height="60"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Button x:Name="button" Content="_Hire Employee" 
@@ -43,5 +43,13 @@
             <local:PersonUserControl Grid.Column="1" Margin="5 5 0 5" DataContext="{Binding SelectedPerson}"/>
             <GridSplitter Background="#FF80C0FF" Width="10"/>
         </Grid>
+        <Button x:Name="buttonRefresh" Content="_Refresh" 
+            HorizontalAlignment="Left" 
+            Margin="146,10,0,0" 
+            VerticalAlignment="Top" 
+            Padding="5 2"
+            Command="{Binding RefreshCmd}" />
+        <ProgressBar Height="10" Margin="213,22,204,0" VerticalAlignment="Top"
+                     IsIndeterminate="{Binding IsRefreshing}"/>
     </Grid>
 </Window>
