--- a/HRManager/MainWindow.xaml
+++ b/HRManager/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HRManager"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525" IsEnabled="{Binding IsNotRefreshing}">
+        Title="MainWindow" Height="350" Width="525" >
     <Window.Resources>
         <DataTemplate x:Key="PersonTemplate">
             <StackPanel Orientation="Horizontal">
@@ -31,8 +31,8 @@
                 Margin="37,10,0,0" 
                 VerticalAlignment="Top" 
                 Padding="5 2"
-                Click="HireEmployeeClick"/>
-        <Grid x:Name="gridContent"  Grid.Row="1">
+                Click="HireEmployeeClick" IsEnabled="{Binding IsNotRefreshing}"/>
+        <Grid x:Name="gridContent"  Grid.Row="1" IsEnabled="{Binding IsNotRefreshing}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="269*" MinWidth="100"/>
                 <ColumnDefinition Width="248*" MinWidth="100"/>
@@ -46,11 +46,17 @@
         </Grid>
         <Button x:Name="buttonRefresh" Content="_Refresh" 
             HorizontalAlignment="Left" 
-            Margin="146,10,0,0" 
+            Margin="148,10,0,0" 
             VerticalAlignment="Top" 
             Padding="5 2"
             Command="{Binding RefreshCmd}" />
-        <ProgressBar Height="10" Margin="213,22,204,0" VerticalAlignment="Top"
+        <ProgressBar Height="10" Margin="304,10,113,0" VerticalAlignment="Top"
                      IsIndeterminate="{Binding IsRefreshing}"/>
+        <Button x:Name="buttonCancel" Content="_Cancel" 
+            HorizontalAlignment="Left" 
+            Margin="220,10,0,0" 
+            VerticalAlignment="Top" 
+            Padding="5 2"
+            Command="{Binding CancelCmd}" />
     </Grid>
 </Window>
