--- a/HRManager/MainWindow.xaml
+++ b/HRManager/MainWindow.xaml
@@ -1,23 +1,20 @@
-﻿<Window x:Class="HRManager.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HRManager"
+        xmlns:Converter="clr-namespace:HRManager.Converter" x:Class="HRManager.MainWindow"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525" >
     <Window.Resources>
         <DataTemplate x:Key="PersonTemplate">
             <StackPanel Orientation="Horizontal">
-                <Border BorderBrush="Red" BorderThickness="1" CornerRadius="4" 
+                <Border BorderBrush="{Binding Age, Converter={StaticResource AgeToBrushConverter}}" BorderThickness="1" CornerRadius="4" 
                         Width="20" Margin="5">
-                    <TextBlock HorizontalAlignment="Center" Text="{Binding Age}" />
+                    <TextBlock HorizontalAlignment="Center" Text="{Binding Age}" Foreground="{Binding Age, Converter={StaticResource AgeToBrushConverter}}" />
                 </Border>
-                <TextBlock Margin="5" >
-                    <Run Text="{Binding Firstname}" />
-                    <Run />
-                    <Run Text="{Binding Lastname}" FontWeight="Bold" />
-                </TextBlock>
+                <TextBlock Margin="5" ><Run Text="{Binding Firstname}" /><Run Text=" "/><Run /><Run Text=" "/><Run Text="{Binding Lastname}" FontWeight="Bold" /></TextBlock>
             </StackPanel>
         </DataTemplate>
     </Window.Resources>
@@ -37,7 +34,7 @@
                 <ColumnDefinition Width="269*" MinWidth="100"/>
                 <ColumnDefinition Width="248*" MinWidth="100"/>
             </Grid.ColumnDefinitions>
-            <ListBox Margin="5 5 15 5"
+            <ListBox Margin="20,5,0,5"
                      HorizontalAlignment="Stretch"
                      ItemTemplate="{DynamicResource PersonTemplate}"
                      ItemsSource="{Binding People}" SelectedItem="{Binding SelectedPerson}" />
