--- a/HRManager/PersonUserControl.xaml
+++ b/HRManager/PersonUserControl.xaml
@@ -25,7 +25,8 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+      <RowDefinition Height="Auto"/>
+      <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -76,5 +77,7 @@
                 <TextBox x:Name="textboxZipcode" Grid.Row="2" Grid.Column="1"  />
             </Grid>
         </Expander>
-    </Grid>
+    <CheckBox Grid.Row="4" Content="Hello"  />
+    <RadioButton Grid.Row="5" Content="Hello" />
+  </Grid>
 </UserControl>
