--- a/HRManager/App.xaml
+++ b/HRManager/App.xaml
@@ -1,10 +1,10 @@
-﻿<Application
+﻿<prism:PrismApplication
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:HRManager"
-             xmlns:Converter="clr-namespace:HRManager.Converter" x:Class="HRManager.App"
-             StartupUri="MainWindow.xaml">
-  <Application.Resources>
+             xmlns:prism="clr-namespace:Prism.Unity;assembly=Prism.Unity.Wpf"
+             xmlns:Converter="clr-namespace:HRManager.Converter" x:Class="HRManager.App">
+    <prism:PrismApplication.Resources>
     <ResourceDictionary>
       <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Dictionary1.xaml"/>
@@ -19,5 +19,5 @@
       <SolidColorBrush x:Key="brushAdult" Color="#FF00C000" />
       <SolidColorBrush x:Key="brushChild" Color="#FFC00000" />
     </ResourceDictionary>
-  </Application.Resources>
-</Application>
+  </prism:PrismApplication.Resources>
+</prism:PrismApplication>
