--- a/HRManager/Views/MainWindow.xaml
+++ b/HRManager/Views/MainWindow.xaml
@@ -64,6 +64,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="60"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="100"/>
         </Grid.RowDefinitions>
         <Button x:Name="button" Content="_Hire Employee" 
                 HorizontalAlignment="Left" 
@@ -120,5 +121,8 @@
             VerticalAlignment="Top" 
             Padding="5 2"
             Command="{Binding CancelCmd}" />
+        <Border BorderBrush="#FF4040C0" BorderThickness="1" Grid.Row="2" >
+            <ContentControl prism:RegionManager.RegionName="toolsRegion"/>
+        </Border>
     </Grid>
 </Window>
