--- a/LinkdInModule/Views/LinkedInView2.xaml
+++ b/LinkdInModule/Views/LinkedInView2.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="LinkedInModule.Views.LinkedInView"
+﻿<UserControl x:Class="LinkedInModule.Views.LinkedInView2"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,15 +6,9 @@
              xmlns:local="clr-namespace:LinkedInModule.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <!--<Border BorderBrush="Red" BorderThickness="1" Margin="10">
-        <Grid>
-            <TextBlock Text="LinkedIn" Margin="40" Background="Red" Width="100" Height="30" />
-        </Grid>
-    </Border>-->
     <Border BorderBrush="#FF4040C0" BorderThickness="1" Margin="10">
         <Grid>
-            <TextBlock Text="LinkedInView1" Margin="10"/>
+            <TextBlock Text="LinkedInView2" Margin="10"/>
         </Grid>
     </Border>
-
 </UserControl>
