--- a/LinkdInModule/Views/UserControlLinkedIn2.xaml
+++ b/LinkdInModule/Views/UserControlLinkedIn2.xaml
@@ -1,20 +1,16 @@
-﻿<UserControl x:Class="LinkedInModule.Views.LinkedInView"
+﻿<UserControl x:Class="LinkedInModule.Views.UserControlLinkedIn2"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:LinkedInModule.Views"
+             xmlns:prism="http://prismlibrary.com/"
+             prism:ViewModelLocator.AutoWireViewModel="True"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <!--<Border BorderBrush="Red" BorderThickness="1" Margin="10">
-        <Grid>
-            <TextBlock Text="LinkedIn" Margin="40" Background="Red" Width="100" Height="30" />
-        </Grid>
-    </Border>-->
     <Border BorderBrush="#FF4040C0" BorderThickness="1" Margin="10">
         <Grid>
-            <TextBlock Text="LinkedInView1" Margin="10"/>
+            <ListBox  ItemsSource="{Binding Jobs}"/>
         </Grid>
     </Border>
-
 </UserControl>
